# MjMicRecorder

./: .gitignore  CMakeLists.txt  EncodersDecoders.cpp  EncodersDecoders.h  MjBuffer.cpp  MjBuffer.h  MjMicRecorder.cpp  MjMicRecorder.h  MjMicRecorder.qrc  MjMicRecorder.rc  MjMicRecorder.ui  MjRecorderMicrophon.cpp  MjRecorderMicrophon.h  MjSignalWaiter.cpp  MjSignalWaiter.h  README.md  VRTPRecorderMicrophon.cpp  VRTPRecorderMicrophon.h  main.cpp  sxSignalWaiter.cpp  sxSignalWaiter.h
